fix overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ code {
     monospace;
 }
 
-#root, .App {
+#root {
+  height: 100%;
+}
+
+.App {
   min-height: 100%;
 }
